hero section done

--- a/index.html
+++ b/index.html
@@ -69,11 +69,29 @@
     </header>
 
     <body>
-      <section class="container mx-auto min-h-dvh bg-[url(images/banner.png)] bg-no-repeat bg-contain">
-        <div class="flex flex-col">
-          <h3 class="text-white">End-to-End Travel With<br /><span class="text-green-500">P-Poribahan</span></h3>
-          <p>Your most trusted Travel partner!</p>
-          <button class="btn btn-primary">button</button>
+      <section class="container mx-auto">
+        <div
+          class="hero min-h-screen rounded-3xl"
+          style="background-image: url(images/banner.png)"
+        >
+          <div class="hero-overlay bg-opacity-0"></div>
+          <div class="hero-content text-center text-neutral-content">
+            <div class="max-w-2xl">
+              <h1 class="mb-5 text-5xl font-bold">
+                End-to-End Travel With<br /><span class="text-green-500"
+                  >P-Poribahan</span
+                >
+              </h1>
+              <p class="mb-5">
+                Your most trusted Travel partner! Buy a ticket now!
+              </p>
+              <button
+                class="btn bg-green-500 border-none btn-accent text-black"
+              >
+              <a href="#booking">Buy Tickets</a>
+              </button>
+            </div>
+          </div>
         </div>
       </section>
     </body>
