--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
               <li><a>Search</a></li>
             </ul>
           </div>
-          <a class="btn btn-ghost text-xl">P-Ticket</a>
+          <a class="btn btn-ghost lg:text-4xl text-xl font-bold">P-Ticket</a>
         </div>
         <div class="navbar-center hidden lg:flex">
           <ul class="menu menu-horizontal px-1">
@@ -95,7 +95,53 @@
         </div>
       </section>
 
-      <section></section>
+      <section class="container mx-auto flex justify-center items-center mb-12">
+        <div class=" min-size-screen w-full pt-24">
+            <div class="hero-content text-center">
+              <div class="w-full">
+                <h1 class="text-4xl font-bold my-4">Best offers for you</h1>
+                <div class="lg:h-56 flex p-4 gap-4 mb-4  lg:flex-row flex-col w-full">
+                    <div class="bg-yellow-500 h-full lg:w-1/2  rounded-2xl relative flex">
+                        <p class="w-2/3 text-left pl-8 py-8">
+                            <span class="text-left text-4xl font-bold">15% OFF</span><br>
+                            <span class="text-2xl font font-semibold">on your next purchase</span><br>
+                            <span class="text-xl">use by January 2024</span>                  
+                        </p>
+                        <img class="h-full absolute top-0 lg:right-48 right-28" src="images/cupon-devider.png" alt="">
+                        <p class="w-1/3 py-14">
+                            <span class="text-left lg:text-4xl font-bold text-3xl">NEW15</span><br>
+                            <span class="text-2xl">Coupon Code</span>
+                        </p>
+                    </div>
+
+                    <div class="bg-rose-400 h-full lg:w-1/2  rounded-2xl relative flex">
+                        <p class="w-2/3 text-left pl-8 py-8">
+                            <span class="text-left text-4xl font-bold">20% OFF</span><br>
+                            <span class="text-2xl font font-semibold">on your next purchase</span><br>
+                            <span class="text-xl">use by January 2024</span><br>
+                        </p>
+                        <img class="h-full absolute top-0 lg:right-48 right-28" src="images/cupon-devider.png" alt="">
+                        <p class="w-1/3 py-14">
+                            <span class="text-left lg:text-4xl font-bold text-3xl"">Couple 20</span><br>
+                            <span class="text-xl">Coupon Code</span>
+                        </p>
+                    </div>
+                </div>
+                <button class="btn btn-ghost border-green-500 text-green-500">See All Offers</button>
+              </div>
+            </div>
+          </div>
+      </section>
+
+      <section id="booking">
+        <div class="min-h-screen bg-red-400 pt-16 rounded-t-3xl">
+            <div class="bg-green-700 text-center">
+                <h2 class="text-5xl font-bold">P. Paribahan</h2>
+                <p class="text-2xl mt-4">Your most trusted Travel partner! Buy a ticket now!</p>
+            </div>
+            <div></div>
+        </div>
+      </section>
     </main>
 
       <footer class="footer pt-20 pb-10 px-20 bg-slate-950 text-white flex flex-col divide-y divide-dashed divide-opacity-40">
