js ticket count +- and listing, totalcount done

--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
                             Price
                         </p>                                
                     </div> 
-                    <!-- will dynamically add -->
+                    <!-- will dynamically add list -->
                     <div id="fare" class="flex flex-col justify-between py-4 divide">                 
                                 
                     </div>
@@ -347,7 +347,7 @@
                 <div class="divider divider-neutral"></div>
                 <div class="flex justify-between ">
                     <h3 class="text-xl font-bold w-2/3">Total Price</h3>
-                    <p class="text-xl font-bold w-1/3">BDT <span class="total">0</span></p>
+                    <p class="text-xl font-bold w-1/3">BDT <span id="total">0</span></p>
                 </div>    
                 
                 <div class="mt-4 flex gap-4">
