--- a/index.html
+++ b/index.html
@@ -350,23 +350,23 @@
                     <p class="text-xl font-bold w-1/3">BDT <span id="total">0</span></p>
                 </div>    
                 
-                <div class="mt-4 flex gap-4">
-                    <input type="text" placeholder="Have any copupon?" class="input input-bordered w-full max-w-xs" />
-                    <button class="btn bg-green-500 text-white">Apply</button>
+                <div class="mt-4 flex gap-4 hidden " id="couponContainer" >
+                    <input type="text" placeholder="Have any copupon?" class="input input-bordered w-full max-w-xs" id="coupon"/>
+                    <button onclick="hasCoupon('coupon')" class="btn bg-green-500 text-white">Apply</button>
                 </div>
 
                 <div class="flex justify-between mt-4">
                     <h3 class="text-xl font-bold w-2/3">Grand Total</h3>
-                    <p class="text-xl font-bold w-1/3">BDT <span class="grandTotal">0</span></p>
+                    <p class="text-xl font-bold w-1/3">BDT <span id="grandTotal">0</span></p>
                 </div>    
 
                 <div class=" flex flex-col gap-2 mt-4">
                     <h3 class="text-xl font-bold ">Passenger Name*</h3>
                     <input type="text" placeholder="Enter your name" class="input input-bordered w-full " />
                     <h3 class="text-xl font-bold ">Phone Number*</h3>
-                    <input type="text" placeholder="Enter your phone number" class="input input-bordered w-full " />
+                    <input type="number" placeholder="Enter your phone number" class="input input-bordered w-full " />
                     <h3 class="text-xl font-bold ">Email ID</h3>
-                    <input type="text" placeholder="Enter your email id" class="input input-bordered w-full " />
+                    <input type="email" placeholder="Enter your email id" class="input input-bordered w-full " />
                     <button class="btn bg-green-500 text-white w-full" onclick="my_modal_1.showModal()">Next</button>
                     <!-- modal start -->
                     <dialog id="my_modal_1" class="modal">
