fixed button clicked to booking section

--- a/index.html
+++ b/index.html
@@ -85,11 +85,13 @@
               <p class="mb-5">
                 Your most trusted Travel partner! Buy a ticket now!
               </p>
-              <button
-                class="btn bg-green-500 border-none btn-accent text-black"
-              >
-              <a href="#booking">Buy Tickets</a>
-              </button>
+              <a href="#booking">                
+                <button
+                  class="btn bg-green-500 border-none btn-accent text-black"
+                >
+                Buy Tickets
+                </button>
+              </a>
             </div>
           </div>
         </div>
