number input field and next button enable/disable on cout is implimented

--- a/index.html
+++ b/index.html
@@ -366,10 +366,10 @@
                     <h3 class="text-xl font-bold ">Passenger Name*</h3>
                     <input type="text" placeholder="Enter your name" class="input input-bordered w-full " />
                     <h3 class="text-xl font-bold ">Phone Number*</h3>
-                    <input type="number" placeholder="Enter your phone number" class="input input-bordered w-full " />
+                    <input type="number" id="phNumber" placeholder="Enter your phone number" class="input input-bordered w-full " />
                     <h3 class="text-xl font-bold ">Email ID</h3>
                     <input type="email" placeholder="Enter your email id" class="input input-bordered w-full " />
-                    <button class="btn bg-green-500 text-white w-full" onclick="my_modal_1.showModal()">Next</button>
+                    <button class="btn bg-green-500 text-white w-full" id="next" onclick="my_modal_1.showModal()">Next</button>
                     <!-- modal start -->
                     <dialog id="my_modal_1" class="modal">
                         <div class="modal-box flex flex-col items-center">
