--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
                     <p class="text-xl font-bold w-1/3">BDT <span id="total">0</span></p>
                 </div>    
                 
-                <div class="mt-4 flex gap-4 hidden " id="couponContainer" >
+                <div class="mt-4 flex gap-4 " id="couponContainer" >
                     <input type="text" placeholder="Have any copupon?" class="input input-bordered w-full max-w-xs" id="coupon"/>
                     <button onclick="hasCoupon('coupon')" class="btn bg-green-500 text-white">Apply</button>
                 </div>
